# ARIAC_23_group7

./: CMakeLists.txt  README.md  package.xml  qualifiers.yaml
config/: group7_sensors.yaml  sensors.yaml
document/: instructions.txt
documentation/: DoxyfileGroup5
etc/: instructions.txt
include/group7/: competition_ready_subscriber.hpp  competition_state_subscriber.hpp  order_class.hpp
launch/: ariac_atom.launch.py  group7.launch.py
src/: competition_ready_subscriber.cpp  competition_state_subscriber.cpp
